// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelValueView correctly applies the theme context className 1`] = `
<dl
  className="label-value-view orion-fusion-theme"
>
  <dt
    className="label"
  >
    Label
  </dt>
  <dd
    className="value-wrapper"
  >
    <div
      className="value"
    >
      --
    </div>
  </dd>
</dl>
`;

exports[`LabelValueView should render LabelValueView for an node input 1`] = `
<dl
  className="label-value-view"
>
  <dt
    className="label"
  >
    Label
  </dt>
  <dd
    className="value-wrapper"
  >
    <div>
      More Sample Text
    </div>
  </dd>
</dl>
`;

exports[`LabelValueView should render LabelValueView for text and node inputs 1`] = `
<dl
  className="label-value-view"
>
  <dt
    className="label"
  >
    Label
  </dt>
  <dd
    className="value-wrapper"
  >
    <div
      className="value"
    >
      Sample Text 1
    </div>
    <div>
      More Sample Text
    </div>
  </dd>
</dl>
`;

exports[`LabelValueView should render a LabelValueView for text input 1`] = `
<dl
  className="label-value-view"
>
  <dt
    className="label"
  >
    Label
  </dt>
  <dd
    className="value-wrapper"
  >
    <div
      className="value"
    >
      Sample Text
    </div>
  </dd>
</dl>
`;

exports[`LabelValueView should render a default LabelValueView 1`] = `
<dl
  className="label-value-view"
>
  <dt
    className="label"
  >
    Label
  </dt>
  <dd
    className="value-wrapper"
  >
    <div
      className="value"
    >
      --
    </div>
  </dd>
</dl>
`;
